Add Survey functionality to Admin Dashboard and mobile app
- Introduced SurveyTab component in AdminDashboard for survey management.
- Updated SideDrawer to include a new Survey tab for navigation.
- Added SurveyActivity to AndroidManifest for mobile app.
- Enhanced LanguageSetupActivity to dynamically create language selection buttons.
- Implemented a new button in ProfileFragment to navigate to SurveyActivity.
- Updated layout files to include survey-related UI elements and improve user experience.

--- a/mobileapp/app/src/main/AndroidManifest.xml
+++ b/mobileapp/app/src/main/AndroidManifest.xml
@@ -111,6 +111,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppDev.NoActionBar"/>
         <activity
+            android:name=".activities.SurveyActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait"
